Fix bug: calculation result not showing

--- a/style.css
+++ b/style.css
@@ -46,7 +46,6 @@ body {
     display: flex;
     flex-direction: column-reverse;
     flex-wrap: wrap;
-    overflow: hidden;
 }
 
 .buttons {
